# m4r_project

./: README.md  __init__.py  pyproject.toml  requirements.txt  time_stepping.py
fest/: __init__.py
fest/lib/: spacetime_operator.py  utils.py  utils_with_operators.py
fest/operator_scripts/: grad.py
fest/scripts/: comparison.py  compute_error.py  conv_proj.py  conv_while.py  ex_mesh.py  exm_burger.py  heat.py  immersed_mesh.py  plot_conv_w.py  time_stepping.py
fest/scripts/examples/: exm_burger.py
fest/tests/: test_burger.py  test_error_comparison.py  test_extruded.py  test_spacetime_operator.py
scripts/: comparison.py  compute_error.py  conv_while.py  ex_mesh.py  exm_burger.py  immersed_mesh.py
tests/: test_heat.py
