[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-time finite element"
version = "2024.0"
description="""bla bla bla"""
license = "MIT"
authors = [
    { name = "Yunkai Zhan", email = "yunkai.zhan21@imperial.ac.uk" },
]
dependencies = [
    "firedrake"
]